docs/apache-airflow-providers-amazon/5.0.0/_sources/_api/airflow/providers/amazon/aws/hooks/kinesis/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.hooks.kinesis`
====================================================

.. py:module:: airflow.providers.amazon.aws.hooks.kinesis

.. autoapi-nested-parse::

   This module contains AWS Firehose hook



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.kinesis.FirehoseHook




.. py:class:: FirehoseHook(delivery_stream, *args, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   Interact with AWS Kinesis Firehose.

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       :class:`~airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   :param delivery_stream: Name of the delivery stream

   .. py:method:: put_records(records)

      Write batch records to Kinesis Firehose



